--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -49,7 +49,7 @@
             </div>
             <div>
                 <h4 class="text-xl font-bold tracking-tight leading-none text-white">QuranVerse</h4>
-                <p class="text-slate-400 text-xs mt-1">Deep Recon Engine</p>
+                <p class="text-slate-400 text-xs mt-1">RCNN Custom Algorithm</p>
             </div>
         </div>
 
