--- a/app/templates/result.html
+++ b/app/templates/result.html
@@ -74,7 +74,7 @@
                                     class="w-8 h-8 rounded-xl bg-indigo-100 text-indigo-600 flex items-center justify-center mr-3">
                                     <i class="bi bi-cpu text-lg"></i>
                                 </div>
-                                <span>AI Cortex Neural</span>
+                                <span>RCNN Custom Algorithm</span>
                                 {% else %}
                                 <div
                                     class="w-8 h-8 rounded-xl bg-amber-100 text-amber-600 flex items-center justify-center mr-3">
