--- a/app/templates/surah_detail.html
+++ b/app/templates/surah_detail.html
@@ -103,9 +103,9 @@
         </div>
     </div>
 
-    <!-- Sidebar: Surah Navigation -->
-    <div class="lg:col-span-4 space-y-8">
-        <div class="bg-white rounded-[2rem] p-8 border border-slate-100 shadow-sm sticky top-8">
+    <!-- Sidebar: Surah Navigation & Tajwid Legend -->
+    <div class="lg:col-span-4 space-y-8 sticky top-8 self-start">
+        <div class="bg-white rounded-[2rem] p-8 border border-slate-100 shadow-sm">
             <h3 class="text-xl font-black text-dark mb-6 flex items-center">
                 <i class="bi bi-list-stars text-primary mr-3 text-2xl"></i> Navigasi Surah
             </h3>
